rev 6:
Fixed changelog.txt (FAIL)

rev 5:
Fixed changelog.txt

rev 4:
Fixed changelog.txt

rev 3:
Changed name from ULX YouTube music player to ULX YouTube Jukebox.
Allowed manual text entry into Volume slider.
Volume is now saved (remembered) via a CVar, and the video volume is automatically set accordingly when a video is loaded.

rev 2:
Initial commit.

rev 1:
Initial directory structure.